--- a/summarizer.yaml
+++ b/summarizer.yaml
@@ -12,10 +12,10 @@ include:
 #    - fix_profile_summary_at_scale
 
 exclude:
-#  artifact_hash:
-#    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
-#  esmf_hash:
-#    - v8.8.0b09*
+  artifact_hash:
+    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
+  esmf_hash:
+    - v8.8.0b09*
 
 #  machine:
 #    - cheyenne
