--- a/summarizer.yaml
+++ b/summarizer.yaml
@@ -12,11 +12,11 @@ include:
 #  esmf_branch:
 #    - fix_profile_summary_at_scale
 
-exclude:
-  artifact_hash:
-    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
-  esmf_hash:
-    - v8.8.0b09*
+#exclude:
+#  artifact_hash:
+#    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
+#  esmf_hash:
+#    - v8.8.0b09*
 
 #  machine:
 #    - cheyenne
