--- a/summarizer.yaml
+++ b/summarizer.yaml
@@ -13,10 +13,12 @@ include:
 #    - fix_profile_summary_at_scale
 
 exclude:
+  esmf_hash:
+    - v9.0.0b01*
+    - v9.0.0b02*
+
 #  artifact_hash:
 #    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
-#  esmf_hash:
-#    - v8.8.0b09*
 
 #  machine:
 #    - cheyenne
