--- a/summarizer.yaml
+++ b/summarizer.yaml
@@ -19,6 +19,9 @@ exclude:
 
 #  artifact_hash:
 #    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
+#  esmf_hash:
+#    - v9.0.0b01*
+
 
 #  machine:
 #    - cheyenne
