--- a/summarizer.yaml
+++ b/summarizer.yaml
@@ -14,14 +14,11 @@ include:
 
 exclude:
   artifact_hash:
-    - 6145f3cfbe876e69fd91c4677e32c147d2cbb20e
-    - 5de6cee9fbe923ec7c3902e2c972ef6063e3e37d
-    - d2dc372720b04a5cae151c5da2c9af6f77407fe6
 
   esmf_hash:
-    - v9.0.0b01*
-    - v9.0.0b02*
 
+
+## Examples
 #  artifact_hash:
 #    - d3e38ad3cda77798eb96d2c5fbd26167d6066c87
 #  esmf_hash:
